--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile 'org.ow2.asm:asm:5.0.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
