--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,7 @@ repositories {
 
 dependencies {
     compile 'org.ow2.asm:asm:5.0.4'
+    compile 'org.ow2.asm:asm-util:5.0.4'
+    compile 'org.ow2.asm:asm-analysis:5.0.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
