--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'org.jglr.lang'
-version '0.1'
+version '1.0'
 
 apply plugin: 'java'
 
@@ -10,6 +10,8 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.google.code.findbugs:jsr305:3.0.0'
     compile 'org.ow2.asm:asm:5.0.4'
     compile 'org.ow2.asm:asm-util:5.0.4'
     compile 'org.ow2.asm:asm-analysis:5.0.4'
